# llmuasage

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  DESIGN.md  LICENSE-MIT  PLAN-typed-optional-source-absent.md  PRODUCT.md  README.md  README.zh-CN.md  TODO.md  findings.md  justfile  problems.md  progress.md  task_plan.md
.brainstorm/: 2026-05-28-tokentracker-hooks-usage-design.md
.github/workflows/: ci.yml
.impeccable/: design.json
.trellis/: .template-hashes.json  config.yaml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/adr/: 0001-source-registry-and-parser-trait.md  0002-sync-shard-as-commit-protocol.md  0003-store-facade-vs-substores.md  0004-schema-version-migration-runner.md  0005-job-registry-in-memory.md  0006-source-file-state-machine.md  0007-llmusage-error-surface.md  0008-source-capability-registry.md  0009-antigravity-source-cutover.md  0010-provider-label-dimension.md  index.md
docs/agents/: domain.md  passive-parser-onboarding.md  passive-source-candidates.md
docs/architecture/: index.md
docs/commands/: index.md
docs/dashboard/: index.md
docs/guide/: codex-tracer.md  export-html.md  first-report.md  first-sync.md  getting-started.md  install-and-init.md
docs/prd/: index.md  llmusage-integration-prd-audit.md  llmusage-integration-prd-v1.1.md  llmusage-integration-prd.md
docs/reference/: cli.md  library-api.md  release-checklist.md
docs/reports/: llmusage_optimization_canvas.md
docs/safety/: index.md
docs/spark/: 2026-05-29-sync-command-center-design.html
docs/zh/: index.md
docs/zh/adr/: index.md
examples/: docs_dashboard_serve.rs
output/playwright/: sync-command-center-dom-check.json  sync-command-center-dom-snippet.html  sync-command-center-dom.html  sync-command-center-http-check.json  sync-command-center-verify.json
pricing/: static-v1.json  static-v2.json
scripts/: benchmark-dashboard-range.mjs
scripts/tests/: dashboard-bootstrap-watchdog.test.mjs  dashboard-fetch.test.mjs  dashboard-load-state.test.mjs  dashboard-render-lifecycle.test.mjs
src/: app.rs  error.rs  lib.rs  logging.rs  main.rs  models.rs  paths.rs  project.rs  registry.rs  sources.rs  util.rs
src/api/: error.rs
src/commands/: blocks.rs  catalog.rs  daily.rs  dash.rs  diagnostics.rs  doctor.rs  export.rs  focused.rs  help.rs  hook_run.rs  init.rs  logs.rs  mod.rs  monthly.rs  report_args.rs  serve.rs  session.rs  source_status.rs  status.rs  statusline.rs  sync.rs  sync_progress.rs  sync_summary.rs  tui.rs  unified_report.rs  uninstall.rs  update.rs  weekly.rs
src/domain/: mod.rs  models.rs  platform_monitor.rs  provider_map.rs  source_descriptor.rs
src/export/: mod.rs
src/integrations/: antigravity.rs  claude.rs  codex.rs  gemini.rs  hook_target.rs  integration.rs  mod.rs  opencode.rs
src/parsers/: behavior.rs  claude.rs  codex.rs  driver.rs  file_progress.rs  file_state.rs  gemini.rs  kimi_code.rs  mod.rs  opencode.rs  pi.rs  source_files.rs  source_parser.rs
src/query/: explorer.rs  filter.rs  heatmap.rs  home_overview.rs  inventory.rs  logs.rs  mod.rs  pricing.rs  pricing_catalog.rs  reports.rs
src/runtime/: app.rs  logging.rs  mod.rs  paths.rs
src/store/: connection.rs  cursor.rs  integration.rs  lease.rs  lock.rs  migrations.rs  mod.rs  pricing_catalog.rs  run_log.rs  schema.rs  source_file.rs  sync_status.rs  sync_writer.rs  trigger.rs
src/sync/: job_registry.rs  mod.rs
src/testing/: mod.rs
src/tui/: app.rs  data_loader.rs  draw.rs  event.rs  footer.rs  format.rs  help_dialog.rs  input.rs  mod.rs  nav_bar.rs  report_table.rs  source_picker.rs  sync_control.rs  theme.rs
src/web/: brand.rs  mod.rs  shell.rs
tests/: local_flow.rs  m2_raw_archive_logs.rs  public_api.rs  report_commands.rs  source_file_state.rs  sync_regression.rs  token_accounting_parity.rs  tui_panels_prop.rs
(+477 files in other folders)
