[package]
name = "llmusage"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["http1", "json", "tokio"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
fs4 = "0.13"
ratatui = "0.30.0"
rusqlite = { version = "0.39.0", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"
tokio = { version = "1.48", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
] }
toml_edit = "0.25.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.23"
